--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -15,7 +15,7 @@ body[theme='light'] {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-[theme='light'] button {
+[theme='light'] button, [theme='light'] .createGuifosButton {
     background-color: #F7C9F3;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
@@ -26,7 +26,10 @@ body[theme='light'] {
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] nav button:hover, [theme='light'] nav button:active {
+[theme='light'] nav button:hover,
+[theme='light'] nav button:active,
+[theme='light'] .createGuifosButton:hover,
+[theme='light'] .createGuifosButton:active {
     border: 1px solid #110038;
     background: #E6BBE2;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
