--- a/assets/styles/styles-general.css
+++ b/assets/styles/styles-general.css
@@ -44,12 +44,42 @@ header {
     white-space: nowrap;
 }
 
+.hidden {
+    display: none;
+}
+
+/*----- Placeholder style-----*/
+.suggestions input::-webkit-input-placeholder,
+.trends input::-webkit-input-placeholder {
+    color: #110038;
+}
+
+.suggestions input:-moz-placeholder,
+.trends input:-moz-placeholder {
+    color: #110038;
+}
+
+.suggestions input::-moz-placeholder,
+.trends input::-moz-placeholder {
+    color: #110038;
+}
+
+.suggestions input:-ms-input-placeholder,
+.trends input:-ms-input-placeholder {
+    color: #110038;
+}
+/*----------*/
+
 /************* Buttons Menu *************/
 .logo {
     width: 102.6px;
     height: 64px;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.logo a {
+    width: 100%;
 }
 
 nav .container {
@@ -67,7 +97,7 @@ nav .container {
     width: 420px;
 }
 
-button {
+button, .createGuifosButton {
     border: 1px solid #110038;
     font-family: 'Chakra Petch', sans-serif;
     font-size: 16px;
@@ -187,14 +217,15 @@ nav a {
     align-items: center;
     padding: 0 14px 0 10px;
     font-size: 16px;
-    color: #B4B4B4; /*NO CAMBIA EL COLOR!!*/
+    color: #B4B4B4; /*TODO NO CAMBIA EL COLOR!!*/
     letter-spacing: 0;
     line-height: 18px;
 }
 
 /************* Suggestions *************/
 .suggestions input,
-.trends input {
+.trends input,
+.mis-guifos input {
     background-color: #FFFAFE;
     border: 1px solid #E6BBE2;
     box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
@@ -205,29 +236,6 @@ nav a {
     width: 100%;
     margin-bottom: 16px;
 }
-
-/*----- Placeholder style-----*/
-.suggestions input::-webkit-input-placeholder,
-.trends input::-webkit-input-placeholder {
-    color: #110038;
-}
-
-.suggestions input:-moz-placeholder,
-.trends input:-moz-placeholder {
-    color: #110038;
-}
-
-.suggestions input::-moz-placeholder,
-.trends input::-moz-placeholder {
-    color: #110038;
-}
-
-.suggestions input:-ms-input-placeholder,
-.trends input:-ms-input-placeholder {
-    color: #110038;
-}
-
-/*----------*/
 
 /************* Gifs Containers *************/
 
@@ -329,4 +337,17 @@ nav a {
 
 .trends .gif-container:hover .bar{
     display: block;
+}
+
+/************* Create Guifos *************/
+
+.create-guifos {
+    padding: 56px 0 153px;
+}
+.window-container {
+    margin: 0 auto;
+    width: 684px;
+    height: 386px;
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
