--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -8,7 +8,7 @@ body[theme='light'] {
 }
 
 [theme='light'] .logo {
-    background-image: url(../img/gifOF_logo.png);
+    background-image: url(../img/gifof_logo.png);
 }
 
 [theme='light'] .bar {
