--- a/assets/styles/styles-night.css
+++ b/assets/styles/styles-night.css
@@ -8,7 +8,7 @@ body[theme='dark'] {
 }
 
 [theme='dark'] .logo {
-    background-image: url(../img/gifOF_logo_dark.png);
+    background-image: url(../img/gifof_logo_dark.png);
 }
 
 [theme='dark'] button {
