--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -15,8 +15,19 @@ body[theme='light'] {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-[theme='light'] button, [theme='light'] .createGuifosButton {
+[theme='light'] button,
+[theme='light'] .createGuifosButton {
     background-color: #F7C9F3;
+    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+}
+
+[theme='light'] .window-container {
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+}
+
+[theme='light'] button.cancelar {
+    background-color: #FFF4FD;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
