--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -15,6 +15,16 @@ body[theme='light'] {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
+[theme='light'] .suggestion-result {
+    background: #F0F0F0;
+}
+
+[theme='light'] .suggestion-result:hover {
+    background: #DBDBDB;
+    border: 1px solid #808080;
+    box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+}
+
 [theme='light'] button,
 [theme='light'] .guifos {
     background-color: #F7C9F3;
