--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -38,25 +38,35 @@ body[theme='light'] {
 
 [theme='light'] button.cancelar {
     background-color: #FFF4FD;
+    border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
+/* [theme='light'] .search-button img {
+    background-image: url(../img/lupa_inactive.svg);
+} */
+
 [theme='light'] .search-button {
     background-color: #E6E6E6;
-    border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+    color: #B4B4B4;
+}
+
+[theme='light'] .search-button.ready {
+    background: #F7C9F3;
+    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
 [theme='light'] nav button:hover,
 [theme='light'] nav button:active,
-[theme='light'] .createGuifosButton:hover,
-[theme='light'] .createGuifosButton:active {
-    border: 1px solid #110038;
+[theme='light'] .nav-button .guifos:hover,
+[theme='light'] .nav-button .guifos:active {
     background: #E6BBE2;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] .theme span.button-text, [theme='light'] .icon {
+[theme='light'] .theme span.button-text,
+[theme='light'] .icon {
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
@@ -71,8 +81,28 @@ body[theme='light'] {
     box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
 }
 
+[theme='light'] .box {
+    background-color: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+}
+
 [theme='light'] .see-more {
     background: #4180F6;
     border: 1px solid #4C2F99;
     box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+}
+
+[theme='light'] .see-more:hover {
+    background: #3A72DB;
+    box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+}
+
+[theme='light'] .suggestions .gif-box {
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+}
+
+[theme='light'] .trends .gif-container:hover {
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
