--- a/assets/styles/styles-general.css
+++ b/assets/styles/styles-general.css
@@ -97,10 +97,6 @@ nav .container {
     position: relative;
 }
 
-/* nav button {
-    position: relative;
-} */
-
 button:hover,
 .nav-button .guifos:hover,
 button:active,
@@ -163,6 +159,11 @@ nav li {
     height: 36px;
     padding: 7px 0 7px 16px;
     text-align: left;
+}
+
+nav li:hover {
+    outline: 1px dotted #110038;
+    outline-offset: -4px;
 }
 
 nav a {
@@ -492,6 +493,12 @@ nav a {
     height: 100%;
 }
 
+.img-border img {
+    width: 100%;
+    height: 100%;
+}
+
+.recording,
 .capturar {
     position: absolute;
     right: 16px;
@@ -499,26 +506,31 @@ nav a {
     height: 38px;
 }
 
+button.recording {
+    background: #FF6161;
+    box-shadow: 
+        inset -1px -1px 0 0 #993A3A, 
+        inset 1px 1px 0 0 #FFFFFF;
+    color: white;
+}
+
+.recording span,
 .capturar span {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
 
+.recording img,
 .capturar img {
-    width: 18px;
+    width: 20px;
 }
 
+.recording .button-text,
 .capturar .button-text {
     width: 144px;
     border-left: 1px solid #110038;
-}
-
-.capturar.recording {
-    background: #FF6161;
-    /* border: 1px solid #110038; */
-    box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-    color: white;
 }
 
 .counter {
