--- a/assets/styles/styles-night.css
+++ b/assets/styles/styles-night.css
@@ -11,6 +11,24 @@ body[theme='dark'] {
     background-image: url(../img/gifof_logo_dark.png);
 }
 
+[theme='dark'] a.my-guifos:hover {
+    outline: 1px dotted #FFFFFF;
+    outline-offset: 4px;
+}
+
+[theme='dark'] a.my-guifos:active {
+    color: #8f8a9b;
+}
+
+/* [theme='dark'] a.my-guifos u {
+    display: none;
+} */
+
+/* [theme='dark'] a.my-guifos u:hover,
+[theme='dark'] a.my-guifos u:active {
+    display: block;
+} */
+
 [theme='dark'] .bar {
     background-image: linear-gradient(270deg, #EE3EFE 0%, #2E32FB 100%);
 }
@@ -42,8 +60,6 @@ body[theme='dark'] {
     color: #8F8F8F;
 }
 
-/* TODO FALTA CAMBIAR LUPA!! */
-
 [theme='dark'] .search-button.ready {
     background: #EE3EFE;
     box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF;
@@ -68,9 +84,19 @@ body[theme='dark'] {
 }
 
 [theme='dark'] nav li {
-    background-color: #CCCCCC;
+    background: #CCCCCC;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+}
+
+[theme='dark'] nav li.selected {
+    background: #2E32FB;
+    border: 1px solid rgba(51,53,143,0.20);
+    box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+}
+
+[theme='dark'] nav li.selected a {
+    color: #FFFFFF;
 }
 
 [theme='dark'] .box {
@@ -105,4 +131,13 @@ body[theme='dark'] {
 [theme='dark'] .trends .gif-container:hover {
     background: #B4B4B4;
     box-shadow: inset -2px -2px 0 0 #5C5C5C, inset 2px 2px 0 0 #FFFFFF;
+}
+
+button.comenzar {
+    color: #FFFFFF;
+}
+
+[theme='dark'] .theme .recording span.button-text,
+[theme='dark'] .recording .icon {
+    box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
