Upgrade: before uploading gif

--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -1,130 +1,130 @@
-body[theme='light'] {
+body[data-theme='light'] {
     background-color: #FFF4FD;
 }
 
-[theme='light'] header {
+[data-theme='light'] header {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
     box-shadow: 0 1px 0 0 #110038;
 }
 
-[theme='light'] .logo {
+[data-theme='light'] .logo {
     background-image: url(../img/gifof_logo.png);
 }
 
-[theme='light'] a.my-guifos:hover {
+[data-theme='light'] a.my-guifos:hover {
     outline: 1px dotted #110038;
     outline-offset: 4px;
 }
 
-[theme='light'] a.my-guifos:active {
+[data-theme='light'] a.my-guifos:active {
     color: #8f8a9b;
 }
 
-[theme='light'] .bar {
+[data-theme='light'] .bar {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-[theme='light'] .suggestion-result {
+[data-theme='light'] .suggestion-result {
     background: #F0F0F0;
 }
 
-[theme='light'] .suggestion-result:hover {
+[data-theme='light'] .suggestion-result:hover {
     background: #DBDBDB;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] button,
-[theme='light'] .guifos {
+[data-theme='light'] button,
+[data-theme='light'] .guifos {
     background-color: #F7C9F3;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] .window-container {
+[data-theme='light'] .window-container {
     background: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] button.cancelar {
+[data-theme='light'] button.cancelar {
     background-color: #FFF4FD;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] .search-button {
+[data-theme='light'] .search-button {
     background-color: #E6E6E6;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
     color: #B4B4B4;
 }
 
-[theme='light'] .search-button.ready {
+[data-theme='light'] .search-button.ready {
     background: #F7C9F3;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] nav button:hover,
-[theme='light'] nav button:active,
-[theme='light'] .nav-button .guifos:hover,
-[theme='light'] .nav-button .guifos:active {
+[data-theme='light'] nav button:hover,
+[data-theme='light'] nav button:active,
+[data-theme='light'] .nav-button .guifos:hover,
+[data-theme='light'] .nav-button .guifos:active {
     background: #E6BBE2;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] .theme span.button-text,
-[theme='light'] .icon {
+[data-theme='light'] .data-theme span.button-text,
+[data-theme='light'] .icon {
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] nav ul {
+[data-theme='light'] nav ul {
     background-color: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] nav li {
+[data-theme='light'] nav li {
     background: #F0F0F0;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] nav li.selected {
+[data-theme='light'] nav li.selected {
     background-color: #FFF4FD;
     border: 1px solid #CCA6C9;
     box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[theme='light'] .box {
+[data-theme='light'] .box {
     background-color: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] .see-more {
+[data-theme='light'] .see-more {
     background: #4180F6;
     border: 1px solid #4C2F99;
     box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] .see-more:hover {
+[data-theme='light'] .see-more:hover {
     background: #3A72DB;
     box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
     outline: 1px dotted #110038;
     outline-offset: -4px;
 }
 
-[theme='light'] .suggestions .gif-box {
+[data-theme='light'] .suggestions .gif-box {
     background: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] .trends .gif-container:hover {
+[data-theme='light'] .trends .gif-container:hover {
     background: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[theme='light'] button.comenzar {
+[data-theme='light'] button.comenzar {
     color: #110038;
 }
 
-[theme='light'] .theme .recording span.button-text,
-[theme='light'] .recording .icon {
+[data-theme='light'] .data-theme .recording span.button-text,
+[data-theme='light'] .recording .icon {
     box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
