--- a/assets/styles/styles-general.css
+++ b/assets/styles/styles-general.css
@@ -496,6 +496,9 @@ nav a {
 .img-border img {
     width: 100%;
     height: 100%;
+    /* width: 80%;
+    display: block;
+    margin: auto; */
 }
 
 .recording,
