Upgrade: mis guifos done

--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -115,7 +115,8 @@ body[data-theme='light'] {
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[data-theme='light'] .trends .gif-container:hover {
+[data-theme='light'] .trends .gif-container:hover,
+[data-theme='light'] .mis-guifos .gif-container:hover {
     background: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
@@ -127,4 +128,8 @@ body[data-theme='light'] {
 [data-theme='light'] .data-theme .recording span.button-text,
 [data-theme='light'] .recording .icon {
     box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
+}
+
+[data-theme='light'] .remake-gif {
+    background: #FFF4FD;
 }
