--- a/assets/styles/styles-night.css
+++ b/assets/styles/styles-night.css
@@ -128,7 +128,8 @@ body[data-theme='dark'] {
     box-shadow: inset -2px -2px 0 0 #5C5C5C, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[data-theme='dark'] .trends .gif-container:hover {
+[data-theme='dark'] .trends .gif-container:hover,
+[data-theme='dark'] .mis-guifos .gif-container:hover {
     background: #B4B4B4;
     box-shadow: inset -2px -2px 0 0 #5C5C5C, inset 2px 2px 0 0 #FFFFFF;
 }
@@ -141,3 +142,11 @@ body[data-theme='dark'] {
 [data-theme='dark'] .recording .icon {
     box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
+
+/* [data-theme='dark'] .upload-gif {
+    
+}
+
+[data-theme='dark'] .remake-gif {
+    
+} */
