--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -45,7 +45,8 @@ body[data-theme='light'] {
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[data-theme='light'] button.cancelar {
+[data-theme='light'] button.cancelar,
+[data-theme='light'] .uploaded-buttons button {
     background-color: #FFF4FD;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
