--- a/assets/styles/styles-night.css
+++ b/assets/styles/styles-night.css
@@ -48,7 +48,8 @@ body[data-theme='dark'] {
     box-shadow: inset -2px -2px 0 0 #8F8F8F, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[data-theme='dark'] button.cancelar {
+[data-theme='dark'] button.cancelar,
+[data-theme='dark'] .uploaded-buttons button {
     background: #CCCCCC;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
