--- a/assets/styles/styles-night.css
+++ b/assets/styles/styles-night.css
@@ -49,7 +49,8 @@ body[data-theme='dark'] {
 }
 
 [data-theme='dark'] button.cancelar,
-[data-theme='dark'] .uploaded-buttons button {
+[data-theme='dark'] .uploaded-buttons button,
+[data-theme='dark'] .remake-gif {
     background: #CCCCCC;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -143,6 +144,7 @@ body[data-theme='dark'] {
 [data-theme='dark'] .recording .icon {
     box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
+
 
 /* [data-theme='dark'] .upload-gif {
     
